# APO

./: .env.example  .gitignore  LICENSE  METHOD.md  README.md  STORY.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/categories/: code.jsonl  math.jsonl  reasoning.jsonl
docs/: RESULTS.md  related_work.md  分析报告.md
results/code/: history.json
results/code_bonus_fixed/: history.json
results/code_nobonus/: history.json
results/math/: history.json
results/math_bonus_fixed/: history.json
results/math_nobonus/: history.json
results/reasoning/: history.json
results/reasoning_nobonus/: history.json
results/summary/: apo_six_epoch_summary.json  apo_six_experiment_data.json  apo_three_experiment_data.json
scripts/: 00_setup_env.sh  01_download_models.py  02_smoke_test.py  02_train_sft.py  03_run_sft.py  03_train_grpo.py  04_evaluate.py  04_inspect_head.py  05_analyze_grpo.py  05_evaluate.py  06_analyze_bench.py  06_run_grpo.py  _common.py  build_mixed.py  collect_categories.py  difficulty_probe.py  run_cat_rl.sh  setup.sh  test_budget.py
src/arch_policy/: __init__.py  baselines.py  (+1 more)
tests/: test_arch_cache.py  test_architecture.py  test_context.py  test_executor.py  test_grpo_advantage.py  test_intern_bugs_regression.py  test_model_dim_review_fixes.py  test_model_dimension.py  test_parallel_waves.py  test_protocol.py  test_reasoning_isolation.py  test_resilience.py  test_resume.py  test_sft_sampler.py  test_sft_step.py  test_tools_wiki.py
tools/: analyze_tool_health.py  probe_concurrency.py  probe_meta_caps.py  probe_tool_health.py
(+37 files in other folders)
